[metadata]
name = airlock-gateway-rest-api-lib
version = 0.1.14
author = Ergon Informatik AG
author_email = support@airlock.com
description = Library for easier use of Airlock REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ergon/airlock-gateway-rest-api-lib-py
project_urls =
    Bug Tracker = https://github.com/ergon/airlock-gateway-rest-api-lib-py/issues
    Documentation = https://ergon.github.io/airlock-gateway-rest-api-lib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src